# gitruff

./: action.yml  main.py  pyproject.toml
.github/workflows/: rufformat.yml  rufformat_alma.yml  rufformat_ubuntu.yml
src/: mymodule.py
