[project]
name = "gitruff"
dynamic = ["version"]
description = "Utilities for loading and processing of satellite data"
authors = [
    { name = "Lagaras", email = "stelios.lagaras@vito.be" }
]
license = { text = "Property of VITO NV" }
requires-python = ">=3.11, <3.12"
dependencies = [
    "boto3>=1.11.9",
    "geopandas>=1.0.1",
]
[dependency-groups]
dev = [
    "jupyterlab>=4.2.5",
    "pytest>=8.3.4",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0"
]

[tool.uv]
default-groups = "all"

[tool.ruff]
exclude = ["*.ipynb"]